test/message/esm_loader_syntax_error.out
(node:*) ExperimentalWarning: --experimental-loader is an experimental feature. This feature could change at any time
(node:*) ExperimentalWarning: The ESM module loader is experimental.

events.js:*
      throw er; // Unhandled 'error' event
      ^
file:///*/test/fixtures/es-module-loaders/syntax-error.mjs:2
await async () => 0;
^^^^^
SyntaxError: Unexpected reserved word
    at Loader.moduleStrategy (internal/modules/esm/translators.js:*:*)
    at async link (internal/modules/esm/module_job.js:*:*)
Emitted 'error' event on Worker instance at:
    at Worker.[kOnErrorMessage] (internal/worker.js:*:*)
    at Worker.[kOnMessage] (internal/worker.js:*:*)
    at MessagePort.<anonymous> (internal/worker.js:*:*)
    at MessagePort.emit (events.js:*:*)
    at MessagePort.onmessage (internal/worker/io.js:*:*)
